src/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	%start_pMain_internal -> Main                      (1)
	%start_pFunDecl_internal -> FunDecl                (2)
	%start_pDecl_internal -> Decl                      (3)
	%start_pArgDecl_internal -> ArgDecl                (4)
	%start_pListArgDecl_internal -> ListArgDecl        (5)
	%start_pBlock_internal -> Block                    (6)
	%start_pInstr_internal -> Instr                    (7)
	%start_pElse_internal -> Else                      (8)
	%start_pListInstr_internal -> ListInstr            (9)
	%start_pExp_internal -> Exp                        (10)
	%start_pExp1_internal -> Exp1                      (11)
	%start_pExp2_internal -> Exp2                      (12)
	%start_pExp3_internal -> Exp3                      (13)
	%start_pExp4_internal -> Exp4                      (14)
	%start_pExp5_internal -> Exp5                      (15)
	%start_pExp6_internal -> Exp6                      (16)
	%start_pListArg_internal -> ListArg                (17)
	%start_pArg_internal -> Arg                        (18)
	%start_pListIdent_internal -> ListIdent            (19)
	%start_pListDecl_internal -> ListDecl              (20)
	%start_pListFunDecl_internal -> ListFunDecl        (21)
	%start_pType_internal -> Type                      (22)
	%start_pBool_internal -> Bool                      (23)
	Ident -> L_Ident                                   (24)
	Integer -> L_integ                                 (25)
	String -> L_quoted                                 (26)
	Program -> ListFunDecl Main                        (27)
	Main -> 'main' Block                               (28)
	FunDecl -> 'def' Type Ident '(' ListArgDecl ')' Block   (29)
	Decl -> FunDecl                                    (30)
	Decl -> Type Ident '=' Exp ';'                     (31)
	Decl -> 'const' Type Ident '=' Exp ';'             (32)
	ArgDecl -> Type Ident                              (33)
	ArgDecl -> 'const' Type Ident                      (34)
	ListArgDecl ->                                     (35)
	ListArgDecl -> ArgDecl                             (36)
	ListArgDecl -> ArgDecl ',' ListArgDecl             (37)
	Block -> '{' ListDecl ListInstr '}' ';'            (38)
	Instr -> Ident '=' Exp ';'                         (39)
	Instr -> 'if' Exp 'then' Instr Else 'fi' ';'       (40)
	Instr -> 'while' Exp 'do' Instr                    (41)
	Instr -> 'print' Exp ';'                           (42)
	Instr -> 'return' Exp ';'                          (43)
	Instr -> 'break' ';'                               (44)
	Instr -> 'raise' Ident ';'                         (45)
	Instr -> 'continue' ';'                            (46)
	Instr -> 'try' Block 'except' Ident ListIdent Block   (47)
	Instr -> Block                                     (48)
	Instr -> Exp ';'                                   (49)
	Else ->                                            (50)
	Else -> 'else' Instr                               (51)
	ListInstr ->                                       (52)
	ListInstr -> Instr ListInstr                       (53)
	Exp -> Exp1 'or' Exp                               (54)
	Exp -> Exp1                                        (55)
	Exp1 -> Exp2 'and' Exp1                            (56)
	Exp1 -> Exp2                                       (57)
	Exp2 -> Exp3 '==' Exp3                             (58)
	Exp2 -> Exp3 '!=' Exp3                             (59)
	Exp2 -> Exp3 '<=' Exp3                             (60)
	Exp2 -> Exp3 '>=' Exp3                             (61)
	Exp2 -> Exp3 '<' Exp3                              (62)
	Exp2 -> Exp3 '>' Exp3                              (63)
	Exp2 -> Exp3                                       (64)
	Exp3 -> Exp3 '+' Exp4                              (65)
	Exp3 -> Exp3 '-' Exp4                              (66)
	Exp3 -> Exp3 '#' Exp4                              (67)
	Exp3 -> Exp4                                       (68)
	Exp4 -> Exp4 '*' Exp5                              (69)
	Exp4 -> Exp4 '/' Exp5                              (70)
	Exp4 -> Exp5                                       (71)
	Exp5 -> '-' Integer                                (72)
	Exp5 -> 'not' Exp6                                 (73)
	Exp5 -> Exp6                                       (74)
	Exp6 -> Integer                                    (75)
	Exp6 -> Bool                                       (76)
	Exp6 -> String                                     (77)
	Exp6 -> Ident                                      (78)
	Exp6 -> Ident '(' ListArg ')'                      (79)
	Exp6 -> '(' Exp ')'                                (80)
	ListArg ->                                         (81)
	ListArg -> Arg                                     (82)
	ListArg -> Arg ',' ListArg                         (83)
	Arg -> Exp                                         (84)
	Arg -> 'ref' Ident                                 (85)
	ListIdent ->                                       (86)
	ListIdent -> Ident                                 (87)
	ListIdent -> Ident ',' ListIdent                   (88)
	ListDecl ->                                        (89)
	ListDecl -> Decl ListDecl                          (90)
	ListFunDecl ->                                     (91)
	ListFunDecl -> FunDecl ListFunDecl                 (92)
	Type -> 'bool'                                     (93)
	Type -> 'int'                                      (94)
	Type -> 'str'                                      (95)
	Bool -> 'true'                                     (96)
	Bool -> 'false'                                    (97)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'#'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'/'            { PT _ (TS _ 9) }
	';'            { PT _ (TS _ 10) }
	'<'            { PT _ (TS _ 11) }
	'<='           { PT _ (TS _ 12) }
	'='            { PT _ (TS _ 13) }
	'=='           { PT _ (TS _ 14) }
	'>'            { PT _ (TS _ 15) }
	'>='           { PT _ (TS _ 16) }
	'and'          { PT _ (TS _ 17) }
	'bool'         { PT _ (TS _ 18) }
	'break'        { PT _ (TS _ 19) }
	'const'        { PT _ (TS _ 20) }
	'continue'     { PT _ (TS _ 21) }
	'def'          { PT _ (TS _ 22) }
	'do'           { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'except'       { PT _ (TS _ 25) }
	'false'        { PT _ (TS _ 26) }
	'fi'           { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'main'         { PT _ (TS _ 30) }
	'not'          { PT _ (TS _ 31) }
	'or'           { PT _ (TS _ 32) }
	'print'        { PT _ (TS _ 33) }
	'raise'        { PT _ (TS _ 34) }
	'ref'          { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'str'          { PT _ (TS _ 37) }
	'then'         { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'try'          { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	%start_pMain_internal rule  1
	%start_pFunDecl_internal rule  2
	%start_pDecl_internal rule  3
	%start_pArgDecl_internal rule  4
	%start_pListArgDecl_internal rule  5
	%start_pBlock_internal rule  6
	%start_pInstr_internal rule  7
	%start_pElse_internal rule  8
	%start_pListInstr_internal rule  9
	%start_pExp_internal rule  10
	%start_pExp1_internal rule  11
	%start_pExp2_internal rule  12
	%start_pExp3_internal rule  13
	%start_pExp4_internal rule  14
	%start_pExp5_internal rule  15
	%start_pExp6_internal rule  16
	%start_pListArg_internal rule  17
	%start_pArg_internal rule  18
	%start_pListIdent_internal rule  19
	%start_pListDecl_internal rule  20
	%start_pListFunDecl_internal rule  21
	%start_pType_internal rule  22
	%start_pBool_internal rule  23
	Ident           rule  24
	Integer         rule  25
	String          rule  26
	Program         rule  27
	Main            rule  28
	FunDecl         rule  29
	Decl            rules 30, 31, 32
	ArgDecl         rules 33, 34
	ListArgDecl     rules 35, 36, 37
	Block           rule  38
	Instr           rules 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49
	Else            rules 50, 51
	ListInstr       rules 52, 53
	Exp             rules 54, 55
	Exp1            rules 56, 57
	Exp2            rules 58, 59, 60, 61, 62, 63, 64
	Exp3            rules 65, 66, 67, 68
	Exp4            rules 69, 70, 71
	Exp5            rules 72, 73, 74
	Exp6            rules 75, 76, 77, 78, 79, 80
	ListArg         rules 81, 82, 83
	Arg             rules 84, 85
	ListIdent       rules 86, 87, 88
	ListDecl        rules 89, 90
	ListFunDecl     rules 91, 92
	Type            rules 93, 94, 95
	Bool            rules 96, 97

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'def'          shift, and enter state 35
	'main'         reduce using rule 91

	Program        goto state 97
	FunDecl        goto state 33
	ListFunDecl    goto state 98

State 1

	%start_pMain_internal -> . Main                     (rule 1)

	'main'         shift, and enter state 96

	Main           goto state 95

State 2

	%start_pFunDecl_internal -> . FunDecl               (rule 2)

	'def'          shift, and enter state 35

	FunDecl        goto state 94

State 3

	%start_pDecl_internal -> . Decl                     (rule 3)

	'bool'         shift, and enter state 30
	'const'        shift, and enter state 40
	'def'          shift, and enter state 35
	'int'          shift, and enter state 31
	'str'          shift, and enter state 32

	FunDecl        goto state 36
	Decl           goto state 93
	Type           goto state 39

State 4

	%start_pArgDecl_internal -> . ArgDecl               (rule 4)

	'bool'         shift, and enter state 30
	'const'        shift, and enter state 91
	'int'          shift, and enter state 31
	'str'          shift, and enter state 32

	ArgDecl        goto state 92
	Type           goto state 90

State 5

	%start_pListArgDecl_internal -> . ListArgDecl       (rule 5)

	'bool'         shift, and enter state 30
	'const'        shift, and enter state 91
	'int'          shift, and enter state 31
	'str'          shift, and enter state 32
	%eof           reduce using rule 35

	ArgDecl        goto state 88
	ListArgDecl    goto state 89
	Type           goto state 90

State 6

	%start_pBlock_internal -> . Block                   (rule 6)

	'{'            shift, and enter state 83

	Block          goto state 87

State 7

	%start_pInstr_internal -> . Instr                   (rule 7)

	'('            shift, and enter state 55
	'-'            shift, and enter state 56
	'break'        shift, and enter state 75
	'continue'     shift, and enter state 76
	'false'        shift, and enter state 27
	'if'           shift, and enter state 77
	'not'          shift, and enter state 57
	'print'        shift, and enter state 78
	'raise'        shift, and enter state 79
	'return'       shift, and enter state 80
	'true'         shift, and enter state 28
	'try'          shift, and enter state 81
	'while'        shift, and enter state 82
	'{'            shift, and enter state 83
	L_Ident        shift, and enter state 25
	L_integ        shift, and enter state 59
	L_quoted       shift, and enter state 60

	Ident          goto state 70
	Integer        goto state 44
	String         goto state 45
	Block          goto state 71
	Instr          goto state 86
	Exp            goto state 74
	Exp1           goto state 47
	Exp2           goto state 48
	Exp3           goto state 49
	Exp4           goto state 50
	Exp5           goto state 51
	Exp6           goto state 52
	Bool           goto state 54

State 8

	%start_pElse_internal -> . Else                     (rule 8)

	'else'         shift, and enter state 85
	%eof           reduce using rule 50

	Else           goto state 84

State 9

	%start_pListInstr_internal -> . ListInstr           (rule 9)

	'('            shift, and enter state 55
	'-'            shift, and enter state 56
	'break'        shift, and enter state 75
	'continue'     shift, and enter state 76
	'false'        shift, and enter state 27
	'if'           shift, and enter state 77
	'not'          shift, and enter state 57
	'print'        shift, and enter state 78
	'raise'        shift, and enter state 79
	'return'       shift, and enter state 80
	'true'         shift, and enter state 28
	'try'          shift, and enter state 81
	'while'        shift, and enter state 82
	'{'            shift, and enter state 83
	L_Ident        shift, and enter state 25
	L_integ        shift, and enter state 59
	L_quoted       shift, and enter state 60
	%eof           reduce using rule 52

	Ident          goto state 70
	Integer        goto state 44
	String         goto state 45
	Block          goto state 71
	Instr          goto state 72
	ListInstr      goto state 73
	Exp            goto state 74
	Exp1           goto state 47
	Exp2           goto state 48
	Exp3           goto state 49
	Exp4           goto state 50
	Exp5           goto state 51
	Exp6           goto state 52
	Bool           goto state 54

State 10

	%start_pExp_internal -> . Exp                       (rule 10)

	'('            shift, and enter state 55
	'-'            shift, and enter state 56
	'false'        shift, and enter state 27
	'not'          shift, and enter state 57
	'true'         shift, and enter state 28
	L_Ident        shift, and enter state 25
	L_integ        shift, and enter state 59
	L_quoted       shift, and enter state 60

	Ident          goto state 43
	Integer        goto state 44
	String         goto state 45
	Exp            goto state 69
	Exp1           goto state 47
	Exp2           goto state 48
	Exp3           goto state 49
	Exp4           goto state 50
	Exp5           goto state 51
	Exp6           goto state 52
	Bool           goto state 54

State 11

	%start_pExp1_internal -> . Exp1                     (rule 11)

	'('            shift, and enter state 55
	'-'            shift, and enter state 56
	'false'        shift, and enter state 27
	'not'          shift, and enter state 57
	'true'         shift, and enter state 28
	L_Ident        shift, and enter state 25
	L_integ        shift, and enter state 59
	L_quoted       shift, and enter state 60

	Ident          goto state 43
	Integer        goto state 44
	String         goto state 45
	Exp1           goto state 68
	Exp2           goto state 48
	Exp3           goto state 49
	Exp4           goto state 50
	Exp5           goto state 51
	Exp6           goto state 52
	Bool           goto state 54

State 12

	%start_pExp2_internal -> . Exp2                     (rule 12)
